shellEditorView: bugfix misaligned widgets

--- a/less/acorn-player.less
+++ b/less/acorn-player.less
@@ -338,6 +338,7 @@
 
     .toolbar-view {
       .transition(0.35s, ease);
+      vertical-align: baseline; // override bootstrap
 
       > * {
         margin-left: 0px;
